--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 
 
-     <!-- preloader -->
+     <!-- preloader 
 
      <div id="pre-loader" style="background-image: url(images/loader.gif)">
 
-     </div>
+     </div> -->
 
 
 <!-- flickity hero -->
