--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@
 
 <section id="all-bg-container" class="dhoinsha-aa">
     <div id="all-bg">
-        <a href="../all-blogs/fitness.html" id="bg-box" style="background-image: url(images/pexels-erik-mclean-5895424-min.jpg)">
+        <a href="all-blogs/fitness.html" id="bg-box" style="background-image: url(images/pexels-erik-mclean-5895424-min.jpg)">
             <div id="bg-inner"></div>
             <p>ক্যালোরি কি ?</p> 
         </a>
-        <a href="../all-blogs/পানি-পান-করার-গুরুত্ব.html" id="bg-box" style="background-image: url(images/pexels-artem-podrez-6823486-min.jpg)">
+        <a href="all-blogs/পানি-পান-করার-গুরুত্ব.html" id="bg-box" style="background-image: url(images/pexels-artem-podrez-6823486-min.jpg)">
             <div id="bg-inner"></div>
             <p>পানি পান করার গুরুত্ব</p> 
         </a>
-        <a href="../all-blogs/আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে.html" id="bg-box" style="background-image: url(images/pexels-andrea-piacquadio-3757954-min.jpg)">
+        <a href="all-blogs/আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে.html" id="bg-box" style="background-image: url(images/pexels-andrea-piacquadio-3757954-min.jpg)">
             <div id="bg-inner"></div>
             <p>আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে</p> 
         </a>
-        <a href="fitness.html" id="bg-box" style="background-image: url(images/pexels-leon-ardho-1552106-min.jpg)">
+        <a href="all-blogs/fitness.html" id="bg-box" style="background-image: url(images/pexels-leon-ardho-1552106-min.jpg)">
             <div id="bg-inner"></div>
             <p>স্থুলতা কি ?</p> 
         </a>
