--- a/all-blogs/sports.html
+++ b/all-blogs/sports.html
@@ -14,7 +14,7 @@
 
     <section id="header">
         <div id="logo">
-            <a href="/index.html">
+            <a href="../index.html">
                 <img src="../images/12annah.com.png" alt="logo">
             </a>
         </div>
