Update আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে.html

--- a/all-blogs/আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে.html
+++ b/all-blogs/আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে.html
@@ -41,7 +41,7 @@
     <section id="blog-1">
         <div id="blog-1-1st">
             <h1>আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে ?</h1> 
-            <img src="/images/pexels-karl-solano-2780762-min.jpg" alt="">
+            <img src="../images/pexels-karl-solano-2780762-min.jpg" alt="">
             <p><br><br>আপনার স্বস্থ্যের ব্যাপারে কেন আপনাকে সচেতন হতে হবে ? <br><br>
 
                 এটাতো কোনোভাবেই অস্বীকার করা যাবে না যে, আমরা সবাই খুব দ্রুত এবং ব্যস্ত সময়ের মধ্যে বাস করি। অর্থ উপার্জনের জন্য আমাদেরকে সারাদিনে একাধিক কাজ সম্পাদন করতে হয়। তবে আমরা ভুলে যাই যে, আমাদের সুস্থ জীবনের জন্য শরীরের জন্য যেমন বাতাস এবং জলের প্রয়োজন তেমনই সুস্বাস্থ্যও প্রয়োজনীয়।<br><br><br> আমরা কিছু মিথ্যা সম্পদ অর্জনের জন্য সময়মতো সঠিক খাবার গ্রহণ করি না, প্রতিদিনের ব্যায়াম, সঠিক বিশ্রাম ইত্যাদি ভুলে যাই। আমাদের কখনই ভুলে যাওয়া উচিত নয় যে আমাদের স্বাস্থ্য জীবনের আসল সম্পদ। এটা সবার জন্য সত্য যে “স্বাস্থ্যই সম্পদ” ।<br><br><br>
